<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_map_place">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/white"
                android:id="@+id/layout_map"
                android:layout_above="@+id/layout_distance">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/view_map"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true">

                    <ImageButton
                        android:id="@+id/image_my_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_action_my_location"
                        android:background="@drawable/circle_white"
                        android:layout_margin="10dp"
                        android:padding="10dp"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/layout_place"
                android:layout_alignParentTop="true"
                android:background="@color/white">

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>

            </RelativeLayout>

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_distance"
                android:visibility="gone"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/layout_distance_cal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layout_main">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/layout_time"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView_time"
                                android:text="@string/app_name"
                                android:textColor="@color/bg_swipe_item_left"
                                android:textSize="@dimen/text_size"
                                android:layout_margin="10dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView_distance"
                                android:text="@string/app_name"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size"
                                android:layout_margin="10dp"/>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/layout_time"
                            android:text="@string/fastest_route_despite_the_usual_traffic"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_small"
                            android:layout_margin="10dp"/>

                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/layout_frame"
                        android:visibility="gone">

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/listView_ways" />

                        <android.support.design.widget.FloatingActionButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|bottom"
                            android:layout_margin="5dp"
                            android:id="@+id/fab_ways"
                            android:src="@drawable/ic_action_name"/>

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:layout_gravity="bottom"
                        android:background="#dedede">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_action_route"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="match_parent"
                            android:text="@string/route_info"
                            android:id="@+id/textView_route"
                            android:textSize="@dimen/slide_desc"
                            android:textStyle="bold"
                            android:gravity="center|start"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.design.widget.CoordinatorLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:id="@+id/layout_gps"
            android:visibility="gone"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/gps"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/enable_gps_to_continue_further"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_gps"
                android:layout_margin="10dp"
                android:id="@+id/button_enable_gps"
                android:layout_gravity="center"
                android:background="@drawable/circle_color"
                android:textSize="@dimen/text_size"
                android:padding="15dp"
                style="?android:attr/buttonBarStyle"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_hotel"
            android:visibility="gone"
            android:background="@color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/image_background">

                    <com.daimajia.slider.library.SliderLayout
                        android:id="@+id/slider"
                        android:layout_width="match_parent"
                        custom:pager_animation="Accordion"
                        custom:auto_cycle="true"
                        custom:indicator_visibility="visible"
                        custom:pager_animation_span="1100"
                        android:layout_height="250dp"/>

                    <com.daimajia.slider.library.Indicators.PagerIndicator
                        android:id="@+id/custom_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        custom:selected_color="#0095BF"
                        custom:unselected_color="#55333333"
                        custom:shape="oval"
                        custom:selected_padding_left="5dp"
                        custom:selected_padding_right="5dp"
                        custom:unselected_padding_left="5dp"
                        custom:unselected_padding_right="5dp"
                        custom:selected_width="6dp"
                        custom:selected_height="6dp"
                        custom:unselected_width="6dp"
                        custom:unselected_height="6dp"
                        android:layout_marginBottom="20dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/hotel_name"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/order_items"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/hotel_address"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/order_items"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:autoLink="phone"
                    android:id="@+id/hotel_contact"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/order_items"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hotel_star"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:isIndicator="true"
                    android:rating="5"
                    android:layout_gravity="center"
                    android:scaleX=".5"
                    android:scaleY=".5"
                    android:stepSize="0.1"
                    android:max="5"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/call_now"
                        android:id="@+id/button_order"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_size"
                        android:padding="15dp"
                        android:background="@color/blue"
                        style="?android:attr/buttonBarStyle"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/white"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:id="@+id/button_close"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_size"
                        android:padding="15dp"
                        android:background="@color/blue"
                        style="?android:attr/buttonBarStyle"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer"/>

</RelativeLayout>